syntax = "proto3";

package proto;
option go_package = "github.com/CM-MORRIS/monzopay/generated;generated";

import "google/protobuf/empty.proto";

service PaymentService {
  rpc Healthz (google.protobuf.Empty) returns (HealthResponse);
  rpc ProcessPayment (ProcessPaymentRequest) returns (ProcessPaymentResponse);
}

message HealthResponse { string status = 1; }
message ProcessPaymentRequest {
  string from_account = 1;
  string to_account = 2;
  int64 amount = 3;
  string idempotency_key = 4;
}
message ProcessPaymentResponse {
  string payment_id = 1;
  string status = 2;
  string trace_id = 3;
}